--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "dom"],
     "moduleResolution": "node",
-    "types": ["node"]
+    "types": ["node"],
   }
 }
